Added ollama service and format request output

--- a/src/CoreApp/CoreApp.API/CoreApp.API.csproj
+++ b/src/CoreApp/CoreApp.API/CoreApp.API.csproj
@@ -39,4 +39,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Config\ollama\" />
+    </ItemGroup>
 </Project>
