--- a/src/CoreApp/CoreApp.API/appsettings.Development.json
+++ b/src/CoreApp/CoreApp.API/appsettings.Development.json
@@ -28,6 +28,11 @@
     "CoreAppDB": "Server=localhost,1433;Database=CoreAppDb;User Id=sa;Password=ContainerLocalDBSqlServer25!;TrustServerCertificate=True",
     "Redis": ""
   },
+  "OllamaService": {
+    "BaseAddress": "http://localhost:11434",
+    "ModelName": "",
+    "ApiKey": ""
+  },
   "OpenTelemetry": {
     "OtelCollectorUrl": "http://localhost:4318",
     "AccessTokenGateway": ""
