--- a/src/CoreApp/CoreApp.API/appsettings.json
+++ b/src/CoreApp/CoreApp.API/appsettings.json
@@ -23,6 +23,11 @@
     "CoreAppDBProvider": "sqlserver",
     "Redis": ""
   },
+  "OllamaService": {
+    "BaseAddress": "",
+    "ModelName": "",
+    "ApiKey": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
