Correction in ollama prompt

--- a/src/CoreApp/CoreApp.API/appsettings.Development.json
+++ b/src/CoreApp/CoreApp.API/appsettings.Development.json
@@ -29,7 +29,7 @@
     "Redis": ""
   },
   "OllamaService": {
-    "BaseAddress": "http://localhost:11434",
+    "BaseAddress": "http://localhost:11434/",
     "ModelName": "",
     "ApiKey": ""
   },
