--- a/src/CoreApp/CoreApp.API/CoreApp.API.csproj
+++ b/src/CoreApp/CoreApp.API/CoreApp.API.csproj
@@ -38,6 +38,9 @@
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="Config\ollama\format_output.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
     <ItemGroup>
