--- a/src/CoreApp/CoreApp.API/CoreApp.API.csproj
+++ b/src/CoreApp/CoreApp.API/CoreApp.API.csproj
@@ -50,5 +50,6 @@
 
     <ItemGroup>
       <Folder Include="Config\ollama\" />
+      <Folder Include="Features\Playground\" />
     </ItemGroup>
 </Project>
