--- a/src/CoreApp/CoreApp.API/appsettings.json
+++ b/src/CoreApp/CoreApp.API/appsettings.json
@@ -20,7 +20,7 @@
   },
   "ConnectionStrings": {
     "CoreAppDB": "",
-    "CoreAppDBProvider": "sqlserver",
+    "CoreAppDBProvider": "postgres",
     "Redis": ""
   },
   "OllamaService": {
