--- a/src/CoreApp/CoreApp.API/CoreApp.API.csproj
+++ b/src/CoreApp/CoreApp.API/CoreApp.API.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="Serilog.Extensions.Logging" />
     <PackageReference Include="Serilog.Sinks.Console" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="WolverineFx" />
   </ItemGroup>
 
     <ItemGroup>
