--- a/src/CoreApp/CoreApp.API/CoreApp.API.csproj
+++ b/src/CoreApp/CoreApp.API/CoreApp.API.csproj
@@ -11,6 +11,9 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" />
     <PackageReference Include="AWSSDK.S3" />
+    <PackageReference Include="Azure.AI.OpenAI" />
+    <PackageReference Include="Azure.Identity" />
+    <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="HtmlAgilityPack" />
     <PackageReference Include="Mediator.Abstractions" />
@@ -51,6 +54,5 @@
 
     <ItemGroup>
       <Folder Include="Config\ollama\" />
-      <Folder Include="Features\Playground\" />
     </ItemGroup>
 </Project>
