added redis config appsettings

--- a/src/CoreApp/CoreApp.API/appsettings.Development.json
+++ b/src/CoreApp/CoreApp.API/appsettings.Development.json
@@ -25,13 +25,10 @@
     }
   },
   "ConnectionStrings": {
-    "CoreAppDB": "Server=localhost,1433;Database=CoreAppDb;User Id=sa;Password=ContainerLocalDBSqlServer25!;TrustServerCertificate=True",
-    "Redis": ""
+    "CoreAppDB": "Server=localhost,1433;Database=CoreAppDb;User Id=sa;Password=ContainerLocalDBSqlServer25!;TrustServerCertificate=True"
   },
-  "OllamaService": {
-    "BaseAddress": "http://localhost:11434/",
-    "ModelName": "",
-    "ApiKey": ""
+  "Redis": {
+    "ConnectionString": ""
   },
   "OpenTelemetry": {
     "OtelCollectorUrl": "http://localhost:4318",
