--- a/src/CoreApp/CoreApp.API/appsettings.json
+++ b/src/CoreApp/CoreApp.API/appsettings.json
@@ -23,10 +23,9 @@
     "CoreAppDBProvider": "postgres",
     "Redis": ""
   },
-  "OllamaService": {
-    "BaseAddress": "",
-    "ModelName": "",
-    "ApiKey": ""
+  "Redis": {
+    "ConnectionString": "",
+    "RedisChannel": "CoreApp"
   },
   "AiService": {
     "Provider": "Gemini",
