--- a/src/CoreApp/CoreApp.API/appsettings.Development.json
+++ b/src/CoreApp/CoreApp.API/appsettings.Development.json
@@ -25,7 +25,7 @@
     }
   },
   "ConnectionStrings": {
-    "CoreAppDB": "Server=localhost,1433;Database=CoreAppDb;User Id=sa;Password=ContainerLocalDBSqlServer25!;TrustServerCertificate=True"
+    "CoreAppDB": "Server=localhost;Port=5433;Database=CoreAppDb;User Id=coredev;Password=corepassdev"
   },
   "Redis": {
     "ConnectionString": ""
