--- a/src/CoreApp/CoreApp.API/appsettings.json
+++ b/src/CoreApp/CoreApp.API/appsettings.json
@@ -39,6 +39,19 @@
       "DeploymentName": ""
     }
   },
+  "StorageService": {
+    "Provider": "AzureBlobStorage",
+    "S3": {
+      "ServiceUrl": "",
+      "AccessKey": "gemini-pro",
+      "SecretKey": "",
+      "BucketName": ""
+    },
+    "AzureBlobStorage": {
+      "ConnectionString": "",
+      "ContainerName": ""
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
