--- a/src/CoreApp/CoreApp.API/appsettings.json
+++ b/src/CoreApp/CoreApp.API/appsettings.json
@@ -12,7 +12,7 @@
       "ClientSecret": "",
       "Scopes": [ "https://graph.microsoft.com/.default" ]
     },
-    "ManagerClientApp": {
+    "CoreClientApp": {
       "ClientId": "",
       "ClientAppId": "",
       "ServicePrincipalId": ""
@@ -20,8 +20,7 @@
   },
   "ConnectionStrings": {
     "CoreAppDB": "",
-    "CoreAppDBProvider": "postgres",
-    "Redis": ""
+    "CoreAppDBProvider": "postgres"
   },
   "Redis": {
     "ConnectionString": "",
@@ -31,7 +30,7 @@
     "Provider": "Gemini",
     "Gemini": {
       "ApiKey": "",
-      "ModelName": "gemini-pro"
+      "ModelName": "gemini-2.5-flash"
     },
     "AzureOpenAI": {
       "ApiKey": "",
@@ -43,7 +42,7 @@
     "Provider": "AzureBlobStorage",
     "S3": {
       "ServiceUrl": "",
-      "AccessKey": "gemini-pro",
+      "AccessKey": "",
       "SecretKey": "",
       "BucketName": ""
     },
