--- a/src/CoreApp/CoreApp.API/appsettings.json
+++ b/src/CoreApp/CoreApp.API/appsettings.json
@@ -23,8 +23,10 @@
     "CoreAppDBProvider": "postgres"
   },
   "Redis": {
-    "ConnectionString": "",
-    "RedisChannel": "CoreApp"
+    "Endpoint": "redis://default:localpass@localhost:6379",
+    "User": "",
+    "Password": "",
+    "RedisChannel": ""
   },
   "AiService": {
     "Provider": "Gemini",
