--- a/src/GWTAI.Angular/package.json
+++ b/src/GWTAI.Angular/package.json
@@ -34,6 +34,7 @@
     "@angular/material-date-fns-adapter": "^20.0.2",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@microsoft/signalr": "^9.0.6",
     "@ng-matero/extensions": "^20.0.0",
     "@ng-matero/extensions-date-fns-adapter": "^20.0.0",
     "@ngx-formly/core": "^7.0.0",
