added a102 azure foundry sdk chat command

--- a/src/CoreApp/CoreApp.API/appsettings.json
+++ b/src/CoreApp/CoreApp.API/appsettings.json
@@ -1,4 +1,19 @@
 {
+  "Ai102": {
+    "AzureAIFoundry": {
+      // Call all your deployed base models:
+      "ProjectEndpoint": "",
+      // Call your Azure OpenAI models
+      "OpenAIEndpoint": "",
+      // Call Computer Vision, Content Safety, Document Intelligence, Language,
+      // Translation, and Token services and separate endpoints for Speech services:
+      "AiServices": {
+        "Endpoint": "",
+        "SpeechToTextEndpoint": "",
+        "TextToSpeechEndpoint": ""
+      }
+    }
+  },
   "EntraIDAuthConfig": {
     "Instance": "https://generalvinez.ciamlogin.com/",
     "TenantId": "",
