--- a/src/CoreAI/requirements.txt
+++ b/src/CoreAI/requirements.txt
@@ -1,5 +1,6 @@
 # Chatterbox TTS Core Package with multilingual support
 chatterbox-tts==0.1.4
+# chatterbox-tts @ git+https://github.com/travisvn/chatterbox-multilingual.git@exp
 
 # Required for Chatterbox TTS watermarker functionality
 resemble-perth
