--- a/src/CoreAI/docker/Dockerfile.cpu
+++ b/src/CoreAI/docker/Dockerfile.cpu
@@ -30,6 +30,9 @@ RUN pip install --no-cache-dir --upgrade pip && \
 COPY requirements.txt ./
 RUN pip install --no-cache-dir fastapi uvicorn[standard] python-dotenv python-multipart requests psutil pydub sse-starlette
 
+# Install chatterbox-tts — with the breaking fix (pkuseg package exclusion) 
+RUN pip install git+https://github.com/travisvn/chatterbox-multilingual.git@exp
+
 # Copy application code
 COPY app/ ./app/
 COPY main.py ./
