--- a/src/CoreAI/docker/docker-compose.rocm.gpu.yml
+++ b/src/CoreAI/docker/docker-compose.rocm.gpu.yml
@@ -1,12 +1,10 @@
-version: '3.8'
-
 services:
   # Main API Service (always included)
   chatterbox-tts:
     build:
       context: ..
-      dockerfile: docker/Dockerfile.blackwell
-    container_name: chatterbox-tts-api-blackwell
+      dockerfile: docker/Dockerfile.rocm.gpu
+    container_name: chatterbox-tts-api-uv-rocm-gpu
     ports:
       - '${PORT:-4123}:${PORT:-4123}'
     environment:
@@ -23,36 +21,57 @@ services:
       - MAX_CHUNK_LENGTH=${MAX_CHUNK_LENGTH:-280}
       - MAX_TOTAL_LENGTH=${MAX_TOTAL_LENGTH:-3000}
 
+      # Long Text TTS Settings
+      - LONG_TEXT_DATA_DIR=${LONG_TEXT_DATA_DIR:-/data/long_text_jobs}
+      - LONG_TEXT_MAX_LENGTH=${LONG_TEXT_MAX_LENGTH:-100000}
+      - LONG_TEXT_CHUNK_SIZE=${LONG_TEXT_CHUNK_SIZE:-2500}
+      - LONG_TEXT_SILENCE_PADDING_MS=${LONG_TEXT_SILENCE_PADDING_MS:-200}
+      - LONG_TEXT_JOB_RETENTION_DAYS=${LONG_TEXT_JOB_RETENTION_DAYS:-7}
+      - LONG_TEXT_MAX_CONCURRENT_JOBS=${LONG_TEXT_MAX_CONCURRENT_JOBS:-3}
+
       # Voice and Model Settings
       - VOICE_SAMPLE_PATH=/app/voice-sample.mp3
-      - DEVICE=${DEVICE:-cuda}
+      - DEVICE=${DEVICE:-auto}
       - MODEL_CACHE_DIR=${MODEL_CACHE_DIR:-/cache}
       - VOICE_LIBRARY_DIR=${VOICE_LIBRARY_DIR:-/voices}
 
+      - HSA_OVERRIDE_GFX_VERSION=10.3.0
+      - PYTORCH_ROCM_ARCH=gfx1033
+
       # NVIDIA/CUDA settings
-      - NVIDIA_VISIBLE_DEVICES=all
-      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+      #- NVIDIA_VISIBLE_DEVICES=all
+      #- NVIDIA_DRIVER_CAPABILITIES=compute,utility
     volumes:
-      # Mount voice sample file (optional)
+       # Mount voice sample file (optional)
       - ${VOICE_SAMPLE_HOST_PATH:-../voice-sample.mp3}:/app/voice-sample.mp3:ro
 
       # Mount model cache for persistence
-      - chatterbox-models:${MODEL_CACHE_DIR:-/cache}
+      - chatterbox-models:/cache
 
       # Mount voice library for persistence
-      - chatterbox-voices:${VOICE_LIBRARY_DIR:-/voices}
+      - chatterbox-voices:/voices
+
+      # Mount long text data for persistence
+      - chatterbox-longtext-data:${LONG_TEXT_DATA_DIR:-/data/long_text_jobs}
 
       # Optional: Mount custom voice samples directory (legacy)
       - ${VOICE_SAMPLES_DIR:-../voice-samples}:/app/voice-samples:ro
 
-    # GPU support (enabled by default for this compose file)
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+    # --- ROCm GPU Access ---
+    # Standard ROCm device access - required for AMD GPU acceleration
+    devices:
+      - "/dev/kfd"
+      - "/dev/dri"
+    group_add:
+      - video
+      - render
+    ipc: host
+    shm_size: 8g
+    security_opt:
+      - seccomp=unconfined
+    privileged: true
+    cap_add:
+      - SYS_PTRACE
 
     restart: unless-stopped
 
