--- a/src/CoreAI/requirements-rocm.txt
+++ b/src/CoreAI/requirements-rocm.txt
@@ -1,5 +1,11 @@
+# torch @ ... (REMOVED)
+# torchaudio @ ... (REMOVED)
+# torchvision @ ... (REMOVED)
+# pytorch-triton-rocm @ ... (REMOVED)
+
 # Chatterbox TTS Core Package with multilingual support
-chatterbox-tts==0.1.4
+# chatterbox-tts==0.1.4
+# chatterbox-tts @ git+https://github.com/travisvn/chatterbox-multilingual.git@exp
 
 # Required for Chatterbox TTS watermarker functionality
 resemble-perth
@@ -26,14 +32,3 @@ pydub>=0.25.1
 
 # Testing Dependencies
 requests>=2.28.0 
-
-
-# Machine Learning & Audio
-torch @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4.1/torch-2.6.0%2Brocm6.4.1.git1ded221d-cp310-cp310-linux_x86_64.whl
-torchaudio @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4.1/torchaudio-2.6.0%2Brocm6.4.1.gitd8831425-cp310-cp310-linux_x86_64.whl
-pytorch-triton-rocm @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4.1/pytorch_triton_rocm-3.2.0%2Brocm6.4.1.git6da9e660-cp310-cp310-linux_x86_64.whl
-numpy
-soundfile # Requires libsndfile system library (e.g., sudo apt-get install libsndfile1 on Debian/Ubuntu)
-huggingface_hub
-descript-audio-codec
-safetensors
